@@ -107,9 +107,6 @@ import re
 import mgi_utils
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #
 #  CONSTANTS
 #
