@@ -1,3 +1,9 @@
+TAG: mcvload-6-0-7-1
+DATE: 01/05/2017
+STAFF: lec 
+CHANGES:
+1) TR12069/obsolete db.setAutoTranslate()
+
 TAG: mcvload-6-0-6-3
 DATE: 11/15/2016
 STAFF: lec 
